# Fractal-GLenator

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
include/glad/: glad.h
include/glfw/: CMakeLists.txt
include/shader/: shader.hpp
shaders/: frag.shader  mandelbrot.shader  phoenix.shader  shader.frag  shader.fs  shader.vs
src/: glad.c  main.cpp  shader.cpp
